# Omdena-Ethiopia

./: README.md  pyproject.toml
src/data/: README.md  download.sh  download_oscar.py
